# code-jam-jazzy-jacarandas-2025

./: .cache.sqlite  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.ini  pyproject.toml  requirements.txt  rxconfig.py
.github/workflows/: lint.yaml
code_jam_jazzy_jacarandas_2025/: charts.py  code_jam_jazzy_jacarandas_2025.py  config.py  logger.py  settings.py  sliders.py  states.py
code_jam_jazzy_jacarandas_2025/components/: about.py  developer_box.py  header.py  layout.py  navbar.py
code_jam_jazzy_jacarandas_2025/humans/: developer_list.py
code_jam_jazzy_jacarandas_2025/pages/: __init__.py  about.py  index.py
src/: main.py
