[project]
# This section contains metadata about your project.
# Don't forget to change the name, description, and authors to match your project!
name = "code-jam-jazzy-jacarandas-2025"
description = "Code jam team Jazzy Jacarandas, 2025."
authors = [{ name = "HEROgold" }]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "confkit>=0.1.4",
    "reflex (>=0.8.5,<0.9.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "openmeteo-requests (>=1.6.0,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "urllib3>=2.0.0",
]

[dependency-groups]
# This `dev` group contains all the development requirements for our linting toolchain.
# Don't forget to pin your dependencies!
# This list will have to be migrated if you wish to use another dependency manager.
dev = ["pre-commit~=4.3.0", "ruff~=0.12.2"]

[tool.ruff]
# Increase the line length. This breaks PEP8 but it is way easier to work with.
# The original reason for this limit was a standard vim terminal is only 79 characters,
# but this doesn't really apply anymore.
line-length = 119
# Target Python 3.12. If you decide to use a different version of Python
# you will need to update this value.
target-version = "py312"
# Automatically fix auto-fixable issues.
fix = true
# The directory containing the source code. If you choose a different project layout
# you will need to update this value.
src = ["src"]

[tool.ruff.lint]
# Enable all linting rules.
select = ["ALL"]
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Missing docstrings.
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
    # Ignore COM812 due to formatter conflict.
    "COM812",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
